--- a/filecombining.ipynb
+++ b/filecombining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -10,6 +10,385 @@
    "source": [
     "import os\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Left_Ankle_Torque.txt\n",
+      "Left_Hip_Active.txt\n",
+      "Left_Hip_Angle.txt\n",
+      "Left_Hip_Angle_Ref.txt\n",
+      "Left_Hip_DCLink.txt\n",
+      "Left_Hip_Resistive.txt\n",
+      "Left_Hip_RPM_Ref.txt\n",
+      "Left_Hip_Torque.txt\n",
+      "Left_Hip_Torque_Real.txt\n",
+      "Left_Hip_Torque_Ref.txt\n",
+      "Left_Index.txt\n",
+      "Left_Knee_Active.txt\n",
+      "Left_Knee_Angle.txt\n",
+      "Left_Knee_Angle_Ref.txt\n",
+      "Left_Knee_Resistive.txt\n",
+      "Left_Knee_RPM_Ref.txt\n",
+      "Left_Knee_Torque.txt\n",
+      "Left_Knee_Torque_Real.txt\n",
+      "Left_Knee_Torque_Ref.txt\n",
+      "Left_LoadCell.txt\n",
+      "Right_Ankle_Torque.txt\n",
+      "Right_Hip_Active.txt\n",
+      "Right_Hip_Angle.txt\n",
+      "Right_Hip_Angle_Ref.txt\n",
+      "Right_Hip_DCLink.txt\n",
+      "Right_Hip_Resistive.txt\n",
+      "Right_Hip_RPM_Ref.txt\n",
+      "Right_Hip_Torque.txt\n",
+      "Right_Hip_Torque_Real.txt\n",
+      "Right_Hip_Torque_Ref.txt\n",
+      "Right_Index.txt\n",
+      "Right_KneeAngle.txt\n",
+      "Right_Knee_Active.txt\n",
+      "Right_Knee_Angle_Ref.txt\n",
+      "Right_Knee_Resistive.txt\n",
+      "Right_Knee_RPM_Ref.txt.txt\n",
+      "Right_Knee_Torque.txt\n",
+      "Right_Knee_Torque_Real.txt\n",
+      "Right_Knee_Torque_Ref.txt\n",
+      "Right_LoadCell.txt\n",
+      "sum1.csv\n",
+      "Left_Ankle_Torque.txt\n",
+      "Left_Hip_Active.txt\n",
+      "Left_Hip_Angle.txt\n",
+      "Left_Hip_Angle_Ref.txt\n",
+      "Left_Hip_DCLink.txt\n",
+      "Left_Hip_Resistive.txt\n",
+      "Left_Hip_RPM_Ref.txt\n",
+      "Left_Hip_Torque.txt\n",
+      "Left_Hip_Torque_Real.txt\n",
+      "Left_Hip_Torque_Ref.txt\n",
+      "Left_Index.txt\n",
+      "Left_Knee_Active.txt\n",
+      "Left_Knee_Angle.txt\n",
+      "Left_Knee_Angle_Ref.txt\n",
+      "Left_Knee_Resistive.txt\n",
+      "Left_Knee_RPM_Ref.txt\n",
+      "Left_Knee_Torque.txt\n",
+      "Left_Knee_Torque_Real.txt\n",
+      "Left_Knee_Torque_Ref.txt\n",
+      "Left_LoadCell.txt\n",
+      "Right_Ankle_Torque.txt\n",
+      "Right_Hip_Active.txt\n",
+      "Right_Hip_Angle.txt\n",
+      "Right_Hip_Angle_Ref.txt\n",
+      "Right_Hip_DCLink.txt\n",
+      "Right_Hip_Resistive.txt\n",
+      "Right_Hip_RPM_Ref.txt\n",
+      "Right_Hip_Torque.txt\n",
+      "Right_Hip_Torque_Real.txt\n",
+      "Right_Hip_Torque_Ref.txt\n",
+      "Right_Index.txt\n",
+      "Right_KneeAngle.txt\n",
+      "Right_Knee_Active.txt\n",
+      "Right_Knee_Angle_Ref.txt\n",
+      "Right_Knee_Resistive.txt\n",
+      "Right_Knee_RPM_Ref.txt.txt\n",
+      "Right_Knee_Torque.txt\n",
+      "Right_Knee_Torque_Real.txt\n",
+      "Right_Knee_Torque_Ref.txt\n",
+      "Right_LoadCell.txt\n",
+      "Left_Ankle_Torque.txt\n",
+      "Left_Hip_Active.txt\n",
+      "Left_Hip_Angle.txt\n",
+      "Left_Hip_Angle_Ref.txt\n",
+      "Left_Hip_DCLink.txt\n",
+      "Left_Hip_Resistive.txt\n",
+      "Left_Hip_RPM_Ref.txt\n",
+      "Left_Hip_Torque.txt\n",
+      "Left_Hip_Torque_Real.txt\n",
+      "Left_Hip_Torque_Ref.txt\n",
+      "Left_Index.txt\n",
+      "Left_Knee_Active.txt\n",
+      "Left_Knee_Angle.txt\n",
+      "Left_Knee_Angle_Ref.txt\n",
+      "Left_Knee_Resistive.txt\n",
+      "Left_Knee_RPM_Ref.txt\n",
+      "Left_Knee_Torque.txt\n",
+      "Left_Knee_Torque_Real.txt\n",
+      "Left_Knee_Torque_Ref.txt\n",
+      "Left_LoadCell.txt\n",
+      "Right_Ankle_Torque.txt\n",
+      "Right_Hip_Active.txt\n",
+      "Right_Hip_Angle.txt\n",
+      "Right_Hip_Angle_Ref.txt\n",
+      "Right_Hip_DCLink.txt\n",
+      "Right_Hip_Resistive.txt\n",
+      "Right_Hip_RPM_Ref.txt\n",
+      "Right_Hip_Torque.txt\n",
+      "Right_Hip_Torque_Real.txt\n",
+      "Right_Hip_Torque_Ref.txt\n",
+      "Right_Index.txt\n",
+      "Right_KneeAngle.txt\n",
+      "Right_Knee_Active.txt\n",
+      "Right_Knee_Angle_Ref.txt\n",
+      "Right_Knee_Resistive.txt\n",
+      "Right_Knee_RPM_Ref.txt.txt\n",
+      "Right_Knee_Torque.txt\n",
+      "Right_Knee_Torque_Real.txt\n",
+      "Right_Knee_Torque_Ref.txt\n",
+      "Right_LoadCell.txt\n",
+      "Left_Ankle_Torque.txt\n",
+      "Left_Hip_Active.txt\n",
+      "Left_Hip_Angle.txt\n",
+      "Left_Hip_Angle_Ref.txt\n",
+      "Left_Hip_DCLink.txt\n",
+      "Left_Hip_Resistive.txt\n",
+      "Left_Hip_RPM_Ref.txt\n",
+      "Left_Hip_Torque.txt\n",
+      "Left_Hip_Torque_Real.txt\n",
+      "Left_Hip_Torque_Ref.txt\n",
+      "Left_Index.txt\n",
+      "Left_Knee_Active.txt\n",
+      "Left_Knee_Angle.txt\n",
+      "Left_Knee_Angle_Ref.txt\n",
+      "Left_Knee_Resistive.txt\n",
+      "Left_Knee_RPM_Ref.txt\n",
+      "Left_Knee_Torque.txt\n",
+      "Left_Knee_Torque_Real.txt\n",
+      "Left_Knee_Torque_Ref.txt\n",
+      "Left_LoadCell.txt\n",
+      "Right_Ankle_Torque.txt\n",
+      "Right_Hip_Active.txt\n",
+      "Right_Hip_Angle.txt\n",
+      "Right_Hip_Angle_Ref.txt\n",
+      "Right_Hip_DCLink.txt\n",
+      "Right_Hip_Resistive.txt\n",
+      "Right_Hip_RPM_Ref.txt\n",
+      "Right_Hip_Torque.txt\n",
+      "Right_Hip_Torque_Real.txt\n",
+      "Right_Hip_Torque_Ref.txt\n",
+      "Right_Index.txt\n",
+      "Right_KneeAngle.txt\n",
+      "Right_Knee_Active.txt\n",
+      "Right_Knee_Angle_Ref.txt\n",
+      "Right_Knee_Resistive.txt\n",
+      "Right_Knee_RPM_Ref.txt.txt\n",
+      "Right_Knee_Torque.txt\n",
+      "Right_Knee_Torque_Real.txt\n",
+      "Right_Knee_Torque_Ref.txt\n",
+      "Right_LoadCell.txt\n",
+      "Left_Ankle_Torque.txt\n",
+      "Left_Hip_Active.txt\n",
+      "Left_Hip_Angle.txt\n",
+      "Left_Hip_Angle_Ref.txt\n",
+      "Left_Hip_DCLink.txt\n",
+      "Left_Hip_Resistive.txt\n",
+      "Left_Hip_RPM_Ref.txt\n",
+      "Left_Hip_Torque.txt\n",
+      "Left_Hip_Torque_Real.txt\n",
+      "Left_Hip_Torque_Ref.txt\n",
+      "Left_Index.txt\n",
+      "Left_Knee_Active.txt\n",
+      "Left_Knee_Angle.txt\n",
+      "Left_Knee_Angle_Ref.txt\n",
+      "Left_Knee_Resistive.txt\n",
+      "Left_Knee_RPM_Ref.txt\n",
+      "Left_Knee_Torque.txt\n",
+      "Left_Knee_Torque_Real.txt\n",
+      "Left_Knee_Torque_Ref.txt\n",
+      "Left_LoadCell.txt\n",
+      "Right_Ankle_Torque.txt\n",
+      "Right_Hip_Active.txt\n",
+      "Right_Hip_Angle.txt\n",
+      "Right_Hip_Angle_Ref.txt\n",
+      "Right_Hip_DCLink.txt\n",
+      "Right_Hip_Resistive.txt\n",
+      "Right_Hip_RPM_Ref.txt\n",
+      "Right_Hip_Torque.txt\n",
+      "Right_Hip_Torque_Real.txt\n",
+      "Right_Hip_Torque_Ref.txt\n",
+      "Right_Index.txt\n",
+      "Right_KneeAngle.txt\n",
+      "Right_Knee_Active.txt\n",
+      "Right_Knee_Angle_Ref.txt\n",
+      "Right_Knee_Resistive.txt\n",
+      "Right_Knee_RPM_Ref.txt.txt\n",
+      "Right_Knee_Torque.txt\n",
+      "Right_Knee_Torque_Real.txt\n",
+      "Right_Knee_Torque_Ref.txt\n",
+      "Right_LoadCell.txt\n",
+      "Left_Ankle_Torque.txt\n",
+      "Left_Hip_Active.txt\n",
+      "Left_Hip_Angle.txt\n",
+      "Left_Hip_Angle_Ref.txt\n",
+      "Left_Hip_DCLink.txt\n",
+      "Left_Hip_Resistive.txt\n",
+      "Left_Hip_RPM_Ref.txt\n",
+      "Left_Hip_Torque.txt\n",
+      "Left_Hip_Torque_Real.txt\n",
+      "Left_Hip_Torque_Ref.txt\n",
+      "Left_Index.txt\n",
+      "Left_Knee_Active.txt\n",
+      "Left_Knee_Angle.txt\n",
+      "Left_Knee_Angle_Ref.txt\n",
+      "Left_Knee_Resistive.txt\n",
+      "Left_Knee_RPM_Ref.txt\n",
+      "Left_Knee_Torque.txt\n",
+      "Left_Knee_Torque_Real.txt\n",
+      "Left_Knee_Torque_Ref.txt\n",
+      "Left_LoadCell.txt\n",
+      "Right_Ankle_Torque.txt\n",
+      "Right_Hip_Active.txt\n",
+      "Right_Hip_Angle.txt\n",
+      "Right_Hip_Angle_Ref.txt\n",
+      "Right_Hip_DCLink.txt\n",
+      "Right_Hip_Resistive.txt\n",
+      "Right_Hip_RPM_Ref.txt\n",
+      "Right_Hip_Torque.txt\n",
+      "Right_Hip_Torque_Real.txt\n",
+      "Right_Hip_Torque_Ref.txt\n",
+      "Right_Index.txt\n",
+      "Right_KneeAngle.txt\n",
+      "Right_Knee_Active.txt\n",
+      "Right_Knee_Angle_Ref.txt\n",
+      "Right_Knee_Resistive.txt\n",
+      "Right_Knee_RPM_Ref.txt.txt\n",
+      "Right_Knee_Torque.txt\n",
+      "Right_Knee_Torque_Real.txt\n",
+      "Right_Knee_Torque_Ref.txt\n",
+      "Right_LoadCell.txt\n",
+      "Left_Ankle_Torque.txt\n",
+      "Left_Hip_Active.txt\n",
+      "Left_Hip_Angle.txt\n",
+      "Left_Hip_Angle_Ref.txt\n",
+      "Left_Hip_DCLink.txt\n",
+      "Left_Hip_Resistive.txt\n",
+      "Left_Hip_RPM_Ref.txt\n",
+      "Left_Hip_Torque.txt\n",
+      "Left_Hip_Torque_Real.txt\n",
+      "Left_Hip_Torque_Ref.txt\n",
+      "Left_Index.txt\n",
+      "Left_Knee_Active.txt\n",
+      "Left_Knee_Angle.txt\n",
+      "Left_Knee_Angle_Ref.txt\n",
+      "Left_Knee_Resistive.txt\n",
+      "Left_Knee_RPM_Ref.txt\n",
+      "Left_Knee_Torque.txt\n",
+      "Left_Knee_Torque_Real.txt\n",
+      "Left_Knee_Torque_Ref.txt\n",
+      "Left_LoadCell.txt\n",
+      "Right_Ankle_Torque.txt\n",
+      "Right_Hip_Active.txt\n",
+      "Right_Hip_Angle.txt\n",
+      "Right_Hip_Angle_Ref.txt\n",
+      "Right_Hip_DCLink.txt\n",
+      "Right_Hip_Resistive.txt\n",
+      "Right_Hip_RPM_Ref.txt\n",
+      "Right_Hip_Torque.txt\n",
+      "Right_Hip_Torque_Real.txt\n",
+      "Right_Hip_Torque_Ref.txt\n",
+      "Right_Index.txt\n",
+      "Right_KneeAngle.txt\n",
+      "Right_Knee_Active.txt\n",
+      "Right_Knee_Angle_Ref.txt\n",
+      "Right_Knee_Resistive.txt\n",
+      "Right_Knee_RPM_Ref.txt.txt\n",
+      "Right_Knee_Torque.txt\n",
+      "Right_Knee_Torque_Real.txt\n",
+      "Right_Knee_Torque_Ref.txt\n",
+      "Right_LoadCell.txt\n",
+      "Left_Ankle_Torque.txt\n",
+      "Left_Hip_Active.txt\n",
+      "Left_Hip_Angle.txt\n",
+      "Left_Hip_Angle_Ref.txt\n",
+      "Left_Hip_DCLink.txt\n",
+      "Left_Hip_Resistive.txt\n",
+      "Left_Hip_RPM_Ref.txt\n",
+      "Left_Hip_Torque.txt\n",
+      "Left_Hip_Torque_Real.txt\n",
+      "Left_Hip_Torque_Ref.txt\n",
+      "Left_Index.txt\n",
+      "Left_Knee_Active.txt\n",
+      "Left_Knee_Angle.txt\n",
+      "Left_Knee_Angle_Ref.txt\n",
+      "Left_Knee_Resistive.txt\n",
+      "Left_Knee_RPM_Ref.txt\n",
+      "Left_Knee_Torque.txt\n",
+      "Left_Knee_Torque_Real.txt\n",
+      "Left_Knee_Torque_Ref.txt\n",
+      "Left_LoadCell.txt\n",
+      "Right_Ankle_Torque.txt\n",
+      "Right_Hip_Active.txt\n",
+      "Right_Hip_Angle.txt\n",
+      "Right_Hip_Angle_Ref.txt\n",
+      "Right_Hip_DCLink.txt\n",
+      "Right_Hip_Resistive.txt\n",
+      "Right_Hip_RPM_Ref.txt\n",
+      "Right_Hip_Torque.txt\n",
+      "Right_Hip_Torque_Real.txt\n",
+      "Right_Hip_Torque_Ref.txt\n",
+      "Right_Index.txt\n",
+      "Right_KneeAngle.txt\n",
+      "Right_Knee_Active.txt\n",
+      "Right_Knee_Angle_Ref.txt\n",
+      "Right_Knee_Resistive.txt\n",
+      "Right_Knee_RPM_Ref.txt.txt\n",
+      "Right_Knee_Torque.txt\n",
+      "Right_Knee_Torque_Real.txt\n",
+      "Right_Knee_Torque_Ref.txt\n",
+      "Right_LoadCell.txt\n",
+      "Left_Ankle_Torque.txt\n",
+      "Left_Hip_Active.txt\n",
+      "Left_Hip_Angle.txt\n",
+      "Left_Hip_Angle_Ref.txt\n",
+      "Left_Hip_DCLink.txt\n",
+      "Left_Hip_Resistive.txt\n",
+      "Left_Hip_RPM_Ref.txt\n",
+      "Left_Hip_Torque.txt\n",
+      "Left_Hip_Torque_Real.txt\n",
+      "Left_Hip_Torque_Ref.txt\n",
+      "Left_Index.txt\n",
+      "Left_Knee_Active.txt\n",
+      "Left_Knee_Angle.txt\n",
+      "Left_Knee_Angle_Ref.txt\n",
+      "Left_Knee_Resistive.txt\n",
+      "Left_Knee_RPM_Ref.txt\n",
+      "Left_Knee_Torque.txt\n",
+      "Left_Knee_Torque_Real.txt\n",
+      "Left_Knee_Torque_Ref.txt\n",
+      "Left_LoadCell.txt\n",
+      "Right_Ankle_Torque.txt\n",
+      "Right_Hip_Active.txt\n",
+      "Right_Hip_Angle.txt\n",
+      "Right_Hip_Angle_Ref.txt\n",
+      "Right_Hip_DCLink.txt\n",
+      "Right_Hip_Resistive.txt\n",
+      "Right_Hip_RPM_Ref.txt\n",
+      "Right_Hip_Torque.txt\n",
+      "Right_Hip_Torque_Real.txt\n",
+      "Right_Hip_Torque_Ref.txt\n",
+      "Right_Index.txt\n",
+      "Right_KneeAngle.txt\n",
+      "Right_Knee_Active.txt\n",
+      "Right_Knee_Angle_Ref.txt\n",
+      "Right_Knee_Resistive.txt\n",
+      "Right_Knee_RPM_Ref.txt.txt\n",
+      "Right_Knee_Torque.txt\n",
+      "Right_Knee_Torque_Real.txt\n",
+      "Right_Knee_Torque_Ref.txt\n",
+      "Right_LoadCell.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "for root, dirs, files in os.walk(\"C:/Users/user/machine/워크봇운동데이터/워크봇운동데이터/김창순\"):\n",
+    "    for i in files:\n",
+    "        print(i)"
    ]
   },
   {
@@ -88,7 +467,6 @@
     "real_result = [ ]\n",
     "\n",
     "text_name = [ ]\n",
-    "\n",
     "for root, dirs, files in os.walk(\"C:/Users/user/machine/워크봇운동데이터/워크봇운동데이터/김창순/2018년02월01일09시46분55초\"):##디렉토리\n",
     "    for fname in files:\n",
     "        ii = 0\n",
@@ -167,7 +545,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.savetxt(\"C:/Users/user/machine/워크봇운동데이터/워크봇운동데이터/김창순/2018년02월01일09시46분55초/sum1.csv\", nt, delimiter=\",\")##파일 위치와 저장파일명"
@@ -221,15 +601,6 @@
    "source": [
     "text_name"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
